updated styling for mobile about and contact to fix spacing from top of page to content

--- a/src/sass/sections/_about.scss
+++ b/src/sass/sections/_about.scss
@@ -144,18 +144,22 @@
         }
 
         @media (max-width: 800px) {
+            
             &-card {
                 width: 100%;
-
+                
                 img {
                     // height: 400px;
                     width: 100%;
                 }
-
+                
                 &.active {
                     width: 100%;
                 }
             }
         }
+    }
+    @media (max-width: 800px) {
+        margin-top: 2em;
     }
 }
