--- a/src/sass/sections/_contact.scss
+++ b/src/sass/sections/_contact.scss
@@ -79,4 +79,7 @@
             background-color: $color-yellowHover;
         }
     }
+    @media (max-width: 800px) {
+        margin-top: 4em;
+    }
 }
